@@ -25,6 +25,18 @@ remctl 3.8 (unreleased)
     file to avoid racing with a process monitor that tries to read the PID
     out of the file before it's written.
 
+    Update to rra-c-util 5.2:
+
+    * Assume calloc initializes pointers to NULL.
+    * Assume free(NULL) is properly ignored.
+    * Suppress shell errors from systemd probes without pkg-config.
+    * Better logging and shutdown of subprocesses during testing.
+
+    Update to C TAP Harness 3.0:
+
+    * Reopen standard input to /dev/null when running a test list.
+    * Don't leak extraneous file descriptors to tests.
+
 remctl 3.7 (2014-01-06)
 
     Fix a client memory leak when remctl_set_ccache is used with a
